--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <link rel="icon" type="image" href="/document.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collab Doc</title>
+    <title>Collab Docs</title>
   </head>
   <body>
     <div id="root"></div>
