Add google AdSense

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image" href="/document.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6076638272896807"
+     crossorigin="anonymous"></script>
+
     <title>Collab Docs</title>
   </head>
   <body>
